// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationHeader NavigationItems should be empty, if extras and news are both disabled 1`] = `Array []`;

exports[`LocationHeader NavigationItems should highlight categories if route corresponds 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "extraAlias": undefined,
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="layout:extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={true}
    text="layout:categories"
  />,
  <HeaderNavigationItem
    active={false}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "eventId": undefined,
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="layout:news"
    tooltip="layout:noNews"
  />,
]
`;

exports[`LocationHeader NavigationItems should highlight events if route corresponds 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "extraAlias": undefined,
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="layout:extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={false}
    text="layout:categories"
  />,
  <HeaderNavigationItem
    active={false}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "eventId": undefined,
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={true}
    text="layout:news"
    tooltip="layout:noNews"
  />,
]
`;

exports[`LocationHeader NavigationItems should highlight extras if extras route is selected 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "extraAlias": undefined,
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={true}
    text="layout:extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={false}
    text="layout:categories"
  />,
  <HeaderNavigationItem
    active={false}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "eventId": undefined,
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="layout:news"
    tooltip="layout:noNews"
  />,
]
`;

exports[`LocationHeader NavigationItems should show categories, if extras or news are enabled 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "extraAlias": undefined,
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="layout:extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={false}
    text="layout:categories"
  />,
]
`;

exports[`LocationHeader NavigationItems should show categories, if extras or news are enabled 2`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={false}
    text="layout:categories"
  />,
  <HeaderNavigationItem
    active={false}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "eventId": undefined,
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="layout:news"
    tooltip="layout:noNews"
  />,
]
`;

exports[`LocationHeader NavigationItems should show extras, categories, events in this order 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "extraAlias": undefined,
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="layout:extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={false}
    text="layout:categories"
  />,
  <HeaderNavigationItem
    active={false}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "eventId": undefined,
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="layout:news"
    tooltip="layout:noNews"
  />,
]
`;

exports[`LocationHeader should match snapshot 1`] = `
<Header
  actionItems={
    Array [
      HeaderActionItem {
        "_dropDownNode": undefined,
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "type": "SEARCH",
        },
        "_iconSrc": "test-file-stub",
      },
      HeaderActionItem {
        "_dropDownNode": undefined,
        "_href": Object {
          "payload": Object {
            "language": "de",
          },
          "type": "LANDING",
        },
        "_iconSrc": "test-file-stub",
      },
      HeaderActionItem {
        "_dropDownNode": <Connect(LanguageSelector)
          languages={
            Array [
              LanguageModel {
                "_code": "de",
                "_name": "Deutsch",
              },
              LanguageModel {
                "_code": "en",
                "_name": "English",
              },
              LanguageModel {
                "_code": "ar",
                "_name": "Arabic",
              },
            ]
          }
        />,
        "_href": undefined,
        "_iconSrc": "test-file-stub",
      },
    ]
  }
  logoHref={
    Object {
      "payload": Object {
        "categoryPath": undefined,
        "city": "augsburg",
        "language": "de",
      },
      "type": "CATEGORIES",
    }
  }
  navigationItems={
    Array [
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "payload": Object {
              "city": "augsburg",
              "extraAlias": undefined,
              "language": "de",
            },
            "type": "EXTRAS",
          }
        }
        selected={false}
        text="layout:extras"
      />,
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "payload": Object {
              "categoryPath": undefined,
              "city": "augsburg",
              "language": "de",
            },
            "type": "CATEGORIES",
          }
        }
        selected={false}
        text="layout:categories"
      />,
      <HeaderNavigationItem
        active={false}
        href={
          Object {
            "payload": Object {
              "city": "augsburg",
              "eventId": undefined,
              "language": "de",
            },
            "type": "EVENTS",
          }
        }
        selected={false}
        text="layout:news"
        tooltip="layout:noNews"
      />,
    ]
  }
  viewportSmall={true}
/>
`;
